# VoltMarket

./: alembic.ini  main.py  pyproject.toml
app/api/: cart.py  comparisons.py  reviews.py
app/models/: cart.py  items.py  orders.py  purchases.py  specifications.py  users.py
app/repositories/: brands.py  cart_items.py  categories.py  comparisons.py  item.py  order_items.py  orders.py  roles.py
app/schemes/: cart.py  reviews.py
app/services/: auth.py  cart.py  comparisons.py  orders.py  reviews.py
backend/: .gitignore
backend/app/: config.py
backend/app/api/: categories.py  items.py  orders.py
backend/app/database/: db_manager.py
backend/app/models/: OrderItem.py  brands.py  categories.py  comparisons.py  items.py  reviews.py  roles.py  specification_types.py
backend/app/repositories/: reviews.py
backend/app/schemes/: brands.py  categories.py  comparisons.py  items.py  orders.py  specifications.py
backend/app/services/: categories.py  items.py
backend/migrations/: env.py
frontend/: catalog.html  comparisons.html  index.html  product.html
frontend/components/: auth.html  footer.html  header.html
frontend/css/: auth.css  catalog.css  product.css  styles.css
frontend/js/: api.js  catalog.js  product.js  script.js
tests/: test_auth.py
